completed MVP and fixed navbar stretch goal. answered all the self-study questions

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,7 +1,7 @@
 // Home Content
 
 .home {
-
+  margin-top:98px;
   .intro {
 
     h2 {
@@ -24,6 +24,11 @@
       margin: 20px 2.5%;
       border-radius: 20px;
       height: 100%;
+    }
+  }
+  .intro{
+    img{
+      .imgCurve();
     }
   }
 
@@ -58,6 +63,7 @@
       }
 
       .btn {
+        .button(white,@header-font-color,10px);
       }
     }
 
@@ -73,3 +79,59 @@
     }
   }
 }// home
+
+@media @phone {
+  .navigation{
+    nav{
+      width:90%;
+    }
+  }
+
+  .home{
+    .intro{
+      img{
+        width:100%;
+      }
+    }
+    .space-images{
+    .sky, .launch{
+      display: none;
+    }
+    .blast{
+      width:100%;
+    }
+  }
+
+    .walk{
+      margin-top: 2%;
+      padding: 15px 20px;
+      width:100%;
+      flex-direction: column-reverse;
+      justify-content: center;
+      align-items: center;
+    
+    .walk-text{
+      width:100%;
+      .btn{
+        width:100%;
+      }
+    }
+    .walk-img{
+      width:100%;
+      margin-left:0%;
+      padding-bottom: 10px;
+    }
+
+    
+  }
+
+
+
+
+
+
+
+  }
+
+
+}
